fix: address PR1 review blockers